--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,14 +21,24 @@ jobs:
       - name: Install Poetry
         run: |
           (Invoke-WebRequest -Uri https://install.python-poetry.org -UseBasicParsing).Content | python -
-          echo "C:\Users\runneradmin\.local\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          $poetryPath = "$env:APPDATA\Python\Scripts"
+          echo "$poetryPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "Poetry installed at $poetryPath"
+
+      - name: Verify Poetry Installation
+        run: |
+          $env:PATH += ";$env:APPDATA\Python\Scripts"
+          poetry --version
 
       - name: Install dependencies
-        run: poetry install --no-root
+        run: |
+          $env:PATH += ";$env:APPDATA\Python\Scripts"
+          poetry install --no-root
 
       - name: Build executable with PyInstaller
         run: |
-          poetry run pyinstaller --onefile --name=my_app src/main.py
+          $env:PATH += ";$env:APPDATA\Python\Scripts"
+          poetry run pyinstaller --onefile --name=my_app main.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
