--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kauri <kauri.off@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = "3.13.1"
 pygame = "^2.6.1"
 numpy = "^2.1"
 numba = "^0.61.0"
