--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Build executable with PyInstaller
         run: |
           $env:PATH += ";$env:APPDATA\Python\Scripts"
-          poetry run pyinstaller --onefile --name=my_app src/main.py
+          poetry run pyinstaller --onefile --name=my_app main.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
